src/log.txt
main.c: In function ‘main’:
main.c:9:17: error: invalid initializer
   wm_config c = config("doesn't matter");
                 ^
main.c:10:25: error: incompatible type for argument 1 of ‘init’
   x_container* x = init(c);
                         ^
In file included from main.c:6:0:
wm.h:30:14: note: expected ‘wm_config * {aka struct wm_config *}’ but argument is of type ‘wm_config {aka struct wm_config}’
 x_container* init(wm_config* c);
              ^
main.c:11:10: error: ‘true’ undeclared (first use in this function)
   while (true) {
          ^
main.c:11:10: note: each undeclared identifier is reported only once for each function it appears in
main.c:12:19: error: incompatible type for argument 2 of ‘event’
     if (!event(x, c)) {
                   ^
In file included from main.c:6:0:
wm.h:31:5: note: expected ‘wm_config * {aka struct wm_config *}’ but argument is of type ‘wm_config {aka struct wm_config}’
 int event(x_container* x, wm_config* c);
     ^
main.c:13:18: error: incompatible type for argument 2 of ‘cleanup’
       cleanup(x, c);
                  ^
In file included from main.c:6:0:
wm.h:32:6: note: expected ‘wm_config * {aka struct wm_config *}’ but argument is of type ‘wm_config {aka struct wm_config}’
 void cleanup(x_container* x, wm_config* c);
      ^
wm.c: In function ‘config’:
wm.c:4:31: error: expected expression before ‘wm_config’
   wm_config c = malloc(sizeof wm_config);
                               ^
wm.c:5:31: error: expected expression before ‘key_pair’
   key_pair* k = malloc(sizeof key_pair);
                               ^
wm.c:8:4: error: invalid type argument of ‘->’ (have ‘wm_config {aka struct wm_config}’)
   c->keys = k;
    ^
wm.c:9:10: warning: return from incompatible pointer type [-Wincompatible-pointer-types]
   return k
          ^
wm.c:10:1: error: expected ‘;’ before ‘}’ token
 }
 ^
wm.c: At top level:
wm.c:12:1: error: unknown type name ‘bool’
 bool init(wm_config c) {
 ^
wm.c:12:6: error: conflicting types for ‘init’
 bool init(wm_config c) {
      ^
In file included from wm.c:1:0:
wm.h:30:14: note: previous declaration of ‘init’ was here
 x_container* init(wm_config* c);
              ^
wm.c: In function ‘init’:
wm.c:13:34: error: expected expression before ‘x_container’
   x_container* x = malloc(sizeof x_container);
                                  ^
wm.c:16:12: error: ‘false’ undeclared (first use in this function)
     return false;
            ^
wm.c:16:12: note: each undeclared identifier is reported only once for each function it appears in
wm.c:19:23: error: invalid type argument of ‘->’ (have ‘wm_config {aka struct wm_config}’)
   for (key_pair* k = c->keys; k != NULL; k = k->next) {
                       ^
wm.c:21:7: warning: implicit declaration of function ‘XKeySymToKeycode’ [-Wimplicit-function-declaration]
       XKeySymToKeycode(x->dpy,XStringToKeySym(k->key)),
       ^
wm.c:21:31: warning: implicit declaration of function ‘XStringToKeySym’ [-Wimplicit-function-declaration]
       XKeySymToKeycode(x->dpy,XStringToKeySym(k->key)),
                               ^
wm.c:23:7: error: ‘root’ undeclared (first use in this function)
       root,
       ^
wm.c:24:7: error: ‘true’ undeclared (first use in this function)
       true,
       ^
wm.c: At top level:
wm.c:31:1: error: unknown type name ‘bool’
 bool event(x_container* x, wm_config* c) {
 ^
wm.c: In function ‘event’:
wm.c:32:30: error: expected ‘)’ before ‘;’ token
   XNextEvent(x->dpy, &(x->ev);
                              ^
wm.c:34:1: error: expected ‘;’ before ‘}’ token
 }
 ^
